--- a/03_HashSets/src/Makefile
+++ b/03_HashSets/src/Makefile
@@ -1,18 +1,24 @@
+files_compile=-cp .:*  hashsets_benchmark/*.java
+files_run=-cp .:* hashsets_benchmark/Benchmark
+
 compile:
-	javac -cp .:commons-math3-3.6.1.jar hashsets_benchmark/*.java
+	javac $(files_compile)
 	mkdir -p ../plots/benchmark-1; ln -fs ../plot.gp ../plots/benchmark-1/;
 	mkdir -p ../plots/benchmark-2; ln -fs ../plot.gp ../plots/benchmark-2/;
 	mkdir -p ../plots/benchmark-3; ln -fs ../plot.gp ../plots/benchmark-3/;
 
+unit_tests:
+	java $(files_run) unit_tests
+
 benchmark-1:
-#	java -cp .:commons-math3-3.6.1.jar hashsets_benchmark/Benchmark > ../plots/benchmark-1/output.dat
-	java -cp .:commons-math3-3.6.1.jar hashsets_benchmark/Benchmark
+#	java $(files_run) > ../plots/benchmark-1/output.dat
+	java $(files_run)
 
 benchmark-2:
-	java -cp .:commons-math3-3.6.1.jar hashsets_benchmark/Benchmark 0 10000 1000 PerThread 0.05 0.05 0.9 5000 true 10 1 2 4 6 8 12 16 20 24 > ../plots/benchmark-2/output.dat
+	java $(files_run) 0 10000 1000 PerThread 0.05 0.05 0.9 5000 true 10 1 2 4 6 8 12 16 20 24 > ../plots/benchmark-2/output.dat
 
 benchmark-3:
-	java -cp .:commons-math3-3.6.1.jar hashsets_benchmark/Benchmark 0 1000000 1000 PerThread 1.0 0.0 0.0 0 true 10 1 2 4 6 8 12 16 20 24 > ../plots/benchmark-3/output.dat
+	java $(files_run) 0 1000000 1000 PerThread 1.0 0.0 0.0 0 true 10 1 2 4 6 8 12 16 20 24 > ../plots/benchmark-3/output.dat
 
 plots:
 	cd ../plots/benchmark-1; gnuplot plot.gp;
